@@ -1,5 +1,7 @@
 2003-05-02  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* : Read PACKAGE/VERSION info from META file.
+
 	* src/munge/munge.c, src/munge/unmunge.c, src/munged/conf.c:
 	  Added V cmdline opt.
 
